# python-logging-humio

./: .gitignore  .pre-commit-config.yaml  Makefile  README.rst  pyproject.toml  setup.cfg  tox.ini
.github/: codecov.yml
.github/workflows/: ci.yml  tox.yml
src/humiologging/: __init__.py  filters.py  formatters.py  utils.py
src/humiologging/handlers/: base.py
tests/: test_formatters.py  test_utils.py
tests/handlers/: test_base.py
