[metadata]
version = attr: humiologging.__version__
name = humiologging
summary = Log utilities for Humio: Handlers, formatters
license = Apache-2.0
long_description = file: README.rst
url = https://github.com/Uninett/humiologging
author = Uninett Opensource
author_email = opensource@uninett.no
platform = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: System :: Logging
    Topic :: System :: Monitoring

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    = src
setup_requires =
    setuptools>=41.0
    wheel>=0.33
install_requires =
    humiolib

[options.package_data]
* =

[options.packages.find]
exclude = tests
where = ./src/
